--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="backup/|edu/illinois/jchen93/bitstampapiandroid1/TransactionsProvider.java|edu/illinois/jchen93/bitstampapiandroid1/TransactionAlarmReceiver.java" kind="src" path="src"/>
+	<classpathentry excluding="backup/|edu/illinois/jchen93/bitstampapiandroid1/TransactionsProvider.java|edu/illinois/jchen93/bitstampapiandroid1/TransactionAlarmReceiver.java|edu/illinois/jchen93/bitstampapiandroid1/OrderBookAPI.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
